[gd_scene load_steps=23 format=3 uid="uid://48f1kg3i181n"]

[ext_resource type="Script" path="res://scripts/level_selection_node.gd" id="1_4bqtl"]
[ext_resource type="Texture2D" uid="uid://bw5nahow3xlj2" path="res://assets/MainMenu/background-ezgif.com-gif-to-sprite-converter.png" id="2_6xnhq"]
[ext_resource type="FontFile" uid="uid://bgdi76ycjyl4q" path="res://assets/GlitchGoblin-2O87v.ttf" id="3_nscxd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hpdb7"]
atlas = ExtResource("2_6xnhq")
region = Rect2(0, 0, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_m82lu"]
atlas = ExtResource("2_6xnhq")
region = Rect2(560, 0, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fpna"]
atlas = ExtResource("2_6xnhq")
region = Rect2(1120, 0, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_4emen"]
atlas = ExtResource("2_6xnhq")
region = Rect2(1680, 0, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8vww"]
atlas = ExtResource("2_6xnhq")
region = Rect2(2240, 0, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_s16mw"]
atlas = ExtResource("2_6xnhq")
region = Rect2(0, 305, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwj2e"]
atlas = ExtResource("2_6xnhq")
region = Rect2(560, 305, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnrrf"]
atlas = ExtResource("2_6xnhq")
region = Rect2(1120, 305, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_28k3a"]
atlas = ExtResource("2_6xnhq")
region = Rect2(1680, 305, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_545x2"]
atlas = ExtResource("2_6xnhq")
region = Rect2(2240, 305, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yxda"]
atlas = ExtResource("2_6xnhq")
region = Rect2(0, 610, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl1rk"]
atlas = ExtResource("2_6xnhq")
region = Rect2(560, 610, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcjbh"]
atlas = ExtResource("2_6xnhq")
region = Rect2(1120, 610, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_54gk1"]
atlas = ExtResource("2_6xnhq")
region = Rect2(1680, 610, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeqfs"]
atlas = ExtResource("2_6xnhq")
region = Rect2(2240, 610, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p88f"]
atlas = ExtResource("2_6xnhq")
region = Rect2(0, 915, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp22i"]
atlas = ExtResource("2_6xnhq")
region = Rect2(560, 915, 560, 305)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgcde"]
atlas = ExtResource("2_6xnhq")
region = Rect2(1120, 915, 560, 305)

[sub_resource type="SpriteFrames" id="SpriteFrames_2jgyp"]
animations = [{
"frames": [{
"duration": 4.0,
"texture": SubResource("AtlasTexture_hpdb7")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_m82lu")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_6fpna")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_4emen")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_c8vww")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_s16mw")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_lwj2e")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_mnrrf")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_28k3a")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_545x2")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_2yxda")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_dl1rk")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_hcjbh")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_54gk1")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_xeqfs")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_4p88f")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_bp22i")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_hgcde")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[node name="LevelSelectionNode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4bqtl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(973, 542)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_2jgyp")
autoplay = "default"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 269.0
grow_vertical = 2

[node name="Level00Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ReturnButton")
focus_neighbor_bottom = NodePath("../Level01Button")
theme_override_fonts/font = ExtResource("3_nscxd")
theme_override_font_sizes/font_size = 64
text = "Tutorial
"
icon_alignment = 1

[node name="Level01Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Level00Button")
focus_neighbor_bottom = NodePath("../ReturnButton")
theme_override_fonts/font = ExtResource("3_nscxd")
theme_override_font_sizes/font_size = 64
text = "Level 01
"
icon_alignment = 1

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
focus_neighbor_top = NodePath("../Level01Button")
focus_neighbor_bottom = NodePath("../Level00Button")
theme_override_fonts/font = ExtResource("3_nscxd")
theme_override_font_sizes/font_size = 64
text = "Return
"
icon_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -115.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_nscxd")
theme_override_font_sizes/font_size = 64
text = "Level Selection"

[connection signal="pressed" from="VBoxContainer/Level00Button" to="." method="_on_level_00_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level01Button" to="." method="_on_level_01_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
